# homewidget-system

./: .editorconfig  .env.example  .gitignore  .gitleaksignore  .npmrc  .output.txt  CONCEPT.md  DEVELOPER_GUIDELINE.md  FINDINGS.md  PR_SUMMARY.md  README.md  TICKET_fix_abarbeiten_offener_punkte.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  quality.sh  renovate.json  test_e2e.db  umsetzungsschritte.txt  widget.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/actions/failure-collector/: action.yml
.github/actions/setup-backend/: action.yml
.github/actions/setup-mobile/: action.yml
.github/actions/setup-playwright/: action.yml
.github/instructions/: *.instructions.md
.github/workflows/: auto-draft-pr.yml  ci.yml  copilot-setup-steps.yml  e2e-extended.yml
.junie/: ATomTool.md  guidelines.md  instructions.md
backend/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: initial_data_e2e.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  home.py  home_demo.py  widgets.py
backend/app/config/: test_e2e.py  timing_public_loader.py  timing_server_loader.py
backend/app/core/: config.py  database.py  db.py  logging_config.py  security.py
backend/app/core/types/: token.py
backend/app/fixtures/: v1.py
backend/app/homewidget/contracts/v1/: widget_contracts.py
backend/app/homewidget/providers/: __init__.py  aggregator.py  base.py  furniture_provider.py  mobile_plans_provider.py
backend/app/middleware/: __init__.py  logging_middleware.py
backend/app/models/: user.py  widget.py
backend/app/schemas/: auth.py  widget.py
backend/app/schemas/v1/: __init__.py  widget_contracts.py
backend/app/services/: auth_service.py  demo_feed_real_source.py  demo_v1_service.py  home_feed_service.py  rate_limit.py  security.py  token_blacklist.py  widget_selection_service.py
backend/app/services/token/: __init__.py  blacklist.py  maintance.py  refresh_lock.py
backend/backend/tests/: utils.py
backend/tests/: __init__.py  conftest.py  pytest.ini  test_auth.py  test_db_init.py  test_health.py  test_security.py  test_timezone.py
backend/tests/api/: test_home_feed_response_model.py
backend/tests/auth/: __init__.py  test_login.py  test_parallel_refresh.py  test_register.py
backend/tests/auth/sec/: __init__.py  test_auth.py  test_security.py  test_token_blacklist.py  test_token_properties.py  test_tokens.py
backend/tests/core/: __init__.py  test_health.py
backend/tests/db/: __init__.py  test_db_init.py  test_persistence.py
backend/tests/general/: __init__.py  test_timezone.py
backend/tests/homewidget/: test_aggregator_strict.py
backend/tests/middleware/: test_request_logging.py
backend/tests/utils/: __init__.py  auth.py  emails.py  passwords.py  time.py  timing.py
backend/tests/widgets/: test_contract_v1.py  test_demo_feed_fallback.py  test_demo_routes_v1.py  test_home_feed.py  test_providers_aggregator_failopen.py  test_selection_pipeline.py  test_widgets_security.py
backend/tools/: start_test_backend_e2e.sh
config/: timing.public.json  timing.server.json
deploy/: docker-compose.yml
docs/: ARCHITECTURE.md  BUGFIX_WIDGET_DISPLAY.md  CI_TESTING.md  CI_VERIFICATION.md  CLEANUP_COMPLETE.md  CONCEPTS.md  FINAL_STATUS.md  IMPROVEMENT_REGISTRATION_FLOW.md  PR_BODY.md  QUICKSTART.md  README.md  REORGANISATION.md  SECURITY.md  SETUP_AND_RUN.md  TECHNICAL_CONCEPT.md  TICKET_fix_abarbeiten_offener_punkte.md  TODO_AFTER_REORGANISATION.md  auth.md  ci-cd.md  ci-terminal.md  dependency-governance.md
docs/backend/: auth09-race-condition-fix.md
docs/core/: AUTHENTICATION.md  FREEMIUM.md  README.md  WIDGETS.md
docs/dev/: DEVELOPER_GUIDELINE.md  TESTING_SECURITY.md  bekannte-warnungen.md  typing-policy.md
docs/development/: CHEATSHEET.sh  COPILOT_USAGE.md  GUIDELINES.md  README.md  TESTING_SECURITY.md  TOOLS.md  TROUBLESHOOTING.md
docs/e2e/: E2E-GUIDE.md  E2E-MANAGEMENT.md  IMPLEMENTATION_SUMMARY.md  QUARANTINE.md  README.md  ci-quarantine-management.md  playwright-testing-guide.md  ticket-c-completion-report.md  ticket-c-implementation.md  ticket-d-completion-report.md  ticket-d-final-report.md  ticket-d-security-summary.md  ticket-d-validation-guide.md  ticket-e-fix-summary.md  ui-release-guide.md
docs/infrastructure/: CI-CD.md  DATABASE.md  README.md
docs/me/: 0.Persönliche Einleitung.md  1. Gesamtkonzept.md  2. Zielbild – Architektur.md
ios/: README.md
ios/ATomDemoFeed/: Config.xcconfig  README.md
ios/ATomDemoFeed/ATomDemoFeed/: ATomDemoFeedApp.swift  ContentView.swift  FeedViewModel.swift
ios/ATomDemoFeed/ATomDemoFeed.xcodeproj/: project.pbxproj
ios/HomeWidgetDemoFeed/: Config.xcconfig
mobile/: Dockerfile.web  TESTING.md  app.json  babel.config.js  detox.config.js  eslint.config.js  package-lock.json  package.json  tsconfig.json
mobile/e2e/: init.js  jest.config.js  login.e2e.js
mobile/src/: App.tsx
mobile/src/__tests__/: AuthExpiry.test.tsx  (+13 more)
mobile/tools/: copy_timing_public.mjs
mobile/web-build/: index.html  metadata.json
tools/: README.md
tools/ci/: ci-download-artifacts-last-run.sh  ci-last-failed-log.sh  ci-last-run.sh  ci-pr-checks.sh  ci-watch-last-run.sh  hw-ci  hw-ci.config.json
tools/core/: __init__.py  environment.py  logging_setup.py  port_manager.py  shell_executor.py
tools/dev/: README.md  quality.sh  run_backend.sh  run_ci_job.sh  run_mobile.sh  setup_dev_env.sh  start.sh
tools/scripts/: __init__.py  __main__.py  e2e_orchestration.py
tools/workflows/: __init__.py  e2e_contracts.py  e2e_seeding.py  port_commands.py
(+150 files in other folders)
