[project]
name = "homewidget-backend"
version = "0.1.0"
description = "FastAPI/SQLModel backend for the homewidget-system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.124",
  "sqlmodel>=0.0.27",
  "uvicorn[standard]>=0.38",
  "argon2-cffi>=23.1",
  "passlib>=1.7",
  "python-jose[cryptography]>=3.5.0",
  "fastapi-cache2>=0.2",
  "fastapi-limiter>=0.1",
  "pydantic[email]>=2.12.5",
  # Required by FastAPI when using form data (e.g., OAuth2PasswordRequestForm)
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "types-python-jose",
  "types-passlib",
  # Für Tests: Starlette/FastAPI TestClient benötigt httpx
  "pytest>=7.0",
  "httpx>=0.24",
  # Async-Test-Support (einige Utils/Endpoints können async sein)
  "pytest-asyncio>=0.23",
  # Deterministische Zeitmanipulation für Token-Expiry-Tests
  "freezegun>=1.5",
  # Realistischere Testdaten (z. B. E-Mails) – optional genutzt
  "faker>=26.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.mypy]
ignore_missing_imports = true

[tool.mypy."app.services.*"]
check_untyped_defs = true

[tool.mypy."app.core.*"]
check_untyped_defs = true

[tool.mypy."app.models.*"]
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# B008: FastAPI Depends() in Defaults ist idiomatisch und sicher
# Info: Hier bewusst ignoriert.
ignore = ["D", "ANN", "B008"]

[tool.pytest.ini_options]
# Silence a third-party deprecation inside passlib's Argon2 handler that queries
# argon2-cffi's __version__. This is external noise and not actionable in our code.
filterwarnings = [
  "ignore:Accessing argon2.__version__ is deprecated and will be removed in a future release:DeprecationWarning:passlib.handlers.argon2",
]