[project]
name = "homewidget-backend"
version = "0.1.0"
description = "FastAPI/SQLModel backend for the homewidget-system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.124",
  "sqlmodel>=0.0.27",
  "uvicorn[standard]>=0.38",
  "argon2-cffi>=23.1",
  "python-jose[cryptography]>=3.5.0",
  "fastapi-cache2>=0.2",
  "fastapi-limiter>=0.1",
  "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.6",
  # Required by FastAPI when using form data (e.g., OAuth2PasswordRequestForm)
  "python-multipart>=0.0.20",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    # Linting / Typing
  "ruff>=0.6",
  "mypy>=1.11",
  "types-python-jose",
    # Tests / Test-Runner
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
    "pytest-cov",
    "pytest-timeout",
    "pytest-socket",
    # HTTP / API-Testing
    # Starlette/FastAPI TestClient benötigt httpx
    "httpx>=0.24",
    "respx",
    "schemathesis",
    # Zeitmanipulation / Testdaten / Property-based Tests
  # Deterministische Zeitmanipulation für Token-Expiry-Tests
  "freezegun>=1.5",
  # Realistischere Testdaten (z. B. E-Mails) – optional genutzt
  "faker>=26.0",
    "hypothesis",
    # Security / Dependencies
    "pip-audit",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.mypy]
ignore_missing_imports = true

[tool.mypy."app.services.*"]
check_untyped_defs = true

[tool.mypy."app.core.*"]
check_untyped_defs = true

[tool.mypy."app.models.*"]
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# B008: FastAPI Depends() in Defaults ist idiomatisch und sicher
# Info: Hier bewusst ignoriert.
ignore = ["D", "ANN", "B008"]
# Security-Regeln (Bandit-kompatibel) zusätzlich aktivieren
extend-select = ["S"]

